# ssvlogger

./: README.md  logger.py  pyproject.toml  setup.py
.github/workflows/: pylint.yml  python-publish.yml
src/ssvlogger/: logger.py
