[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssvlogger"
version = "1.0.0"
authors = [
  { name="JKinc"},
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0 license",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JKincorperated/ssvlogger"
Issues = "https://github.com/JKincorperated/ssvlogger/issues"